--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.3.1",
     "react-scripts": "^5.0.1",
     "simplex-noise": "^4.0.3",
+    "styled-components": "^6.1.13",
     "three": "^0.152.2",
     "three-stdlib": "^2.33.0",
     "web-vitals": "^1.0.1"
